# s3du

./: README.md  s3du.py  setup.cfg
s3du/: __init__.py
