[metadata]
name = s3du
author = Luke Plausin
author-email = luke.plausin@jha.com
summary = Python utility for analysing cloud storage usage
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/lukeplausin/s3du
project_urls =
    Bug Tracker = https://github.com/lukeplausin/s3du
    Documentation = https://github.com/lukeplausin/s3du
    Source Code = https://github.com/lukeplausin/s3du
license = MIT
classifier =
    Programming Language :: Python :: 3
    Natural Language :: English
    Intended Audience :: Developers
keywords =
    utilities
    python
    aws
    amazon
    s3
    du
    usage
    cloud


[files]
packages =
    s3du

# data_files =
#     etc/pbr = etc/*
#     etc/init =
#         pbr.packaging.conf
#         pbr.version.conf

[entry_points]
console_scripts =
    s3du = s3du:main
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
